--- a/package.json
+++ b/package.json
@@ -13,9 +13,9 @@
     "debug": "~2.6.9",
     "express": "~4.16.0",
     "http-errors": "~1.6.2",
-    "jade": "~1.11.0",
     "morgan": "~1.9.0",
-    "sequelize": "^5.10.0",
+    "pug": "^2.0.4",
+    "sequelize": "^5.10.1",
     "sqlite3": "^4.0.9"
   }
 }
