--- a/package.json
+++ b/package.json
@@ -17,5 +17,8 @@
     "pug": "^2.0.4",
     "sequelize": "^5.10.1",
     "sqlite3": "^4.0.9"
+  },
+  "devDependencies": {
+    "jest": "^24.8.0"
   }
 }
