--- a/client/package.json
+++ b/client/package.json
@@ -6,7 +6,7 @@
     "serve": "vue-cli-service serve",
     "build": "vue-cli-service build",
     "lint": "vue-cli-service lint",
-    "test": "jest src/tests/*.test.js"
+    "test": "tape src/tests/*.test.js | tap-spec"
   },
   "dependencies": {
     "axios": "^0.18.0",
@@ -21,10 +21,12 @@
     "@vue/cli-plugin-eslint": "^3.6.0",
     "@vue/cli-service": "^3.6.0",
     "babel-eslint": "^10.0.1",
+    "babel-polyfill": "^6.26.0",
     "eslint-plugin-vue": "^5.0.0",
-    "jest": "^24.8.0",
     "stylus": "^0.54.5",
     "stylus-loader": "^3.0.1",
+    "tap-spec": "^5.0.0",
+    "tape": "^4.11.0",
     "vue-cli-plugin-vuetify": "^0.5.0",
     "vue-template-compiler": "^2.5.21",
     "vuetify-loader": "^1.0.5"
